creating child window....

--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="mySample.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="settingsWindow.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowsProject1.h" />
     <ClInclude Include="windowStuff.h" />
